refactoring: getURLInitialization() --> getURIInitialization().